client side sorting

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
         <div class="btn-group btn-group-toggle" id="sort_by" data-toggle="buttons">
           <label class="btn btn-primary active">
-            <input id="sort_by_title" type="radio" name="sort_by" autocomplete="off" value="sort_title" checked="" />title
+            <input id="sort_by_title" type="radio" name="sort_by" autocomplete="off" value="title" checked="" />title
           </label>
           <label class="btn btn-primary">
             <input id="sort_by_year" type="radio" name="sort_by" autocomplete="off" value="year" />year
           </label>
           <label class="btn btn-primary">
-            <input id="sort_by_rating" type="radio" name="sort_by" autocomplete="off" value="metacritic_score" />rating
+            <input id="sort_by_rating" type="radio" name="sort_by" autocomplete="off" value="rating" />rating
           </label>
           <label class="btn btn-primary">
             <input id="sort_by_runtime" type="radio" name="sort_by" autocomplete="off" value="runtime" />runtime
